--- a/style.css
+++ b/style.css
@@ -2219,7 +2219,7 @@ a.phone-button:focus,
     margin-left: 0;
     margin-right: 0;
     padding-top: 0;
-    margin-top: -74px;
+    margin-top: -113px;
   }
 }
 
